<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="68dp"
    android:layout_marginEnd="68dp"
    android:background="@drawable/oval_watchbg"
    android:padding="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="@string/suredeleteWatch"
            android:textColor="#5B5959"
            android:textSize="@dimen/font16" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtLabel"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/txtCancle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textColor="@color/main"

                android:textSize="@dimen/font16" />

            <TextView
                android:layout_width="@dimen/lineHeight"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:background="#D9DFE2"
                android:text="|" />

            <TextView
                android:id="@+id/txtSure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/confirm"
                android:textColor="@color/main"
                android:textSize="@dimen/font16" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>

