<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/allLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_item_height"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/back_button_margin_left"
            android:src="@drawable/icon_back_black_normal" />

        <TextView
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/dial_custom" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_line" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/syncWathch"
        android:layout_below="@id/title"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/mergeBitmap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/marginTop20"
                android:visibility="visible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginStart="@dimen/settings_margin_left"
                android:layout_marginTop="@dimen/marginTop20"
                android:layout_marginEnd="@dimen/settings_margin_left"
                android:background="@color/gray_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_margin_left"
                android:layout_marginTop="@dimen/marginTop20"
                android:layout_marginEnd="@dimen/settings_margin_left"
                android:text="@string/dial_bg_setting"
                android:textColor="@color/text_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_margin_left"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dial_select_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/settings_margin_left"
                    android:drawableTop="@drawable/dial_select_pic"
                    android:gravity="center"
                    android:text="@string/dial_select_pic"
                    android:textColor="@color/text_black" />

                <TextView
                    android:id="@+id/dial_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/settings_margin_left"
                    android:drawableTop="@drawable/dial_reset"
                    android:gravity="center"
                    android:text="@string/dial_reset"
                    android:textColor="@color/text_black" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginStart="@dimen/settings_margin_left"
                android:layout_marginTop="@dimen/marginTop20"
                android:layout_marginEnd="@dimen/settings_margin_left"
                android:background="@color/gray_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/settings_margin_left"
                android:layout_marginTop="@dimen/marginTop20"
                android:layout_marginEnd="@dimen/settings_margin_left"
                android:text="@string/dial_font_color"
                android:textColor="@color/text_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_margin_left"
                android:orientation="horizontal">

                <com.yc.peddemo.onlinedial.CustomDialGridView
                    android:id="@+id/xxListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="6"></com.yc.peddemo.onlinedial.CustomDialGridView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginStart="@dimen/settings_margin_left"
                android:layout_marginTop="@dimen/marginTop20"
                android:layout_marginEnd="@dimen/settings_margin_left"
                android:layout_marginBottom="@dimen/settings_margin_left"
                android:background="@color/gray_line" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/syncWatchHeight"
        android:layout_alignParentBottom="true"
        android:progress="100"
        android:progressDrawable="@drawable/watch_progressbar_bg"
        android:visibility="visible" />

    <TextView
        android:id="@+id/syncWathch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/syncWatchHeight"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/syncWathch"
        android:textColor="@color/white"
        android:textSize="@dimen/font18" />
</RelativeLayout>

